<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/main_activity_left_right_padding"
        android:paddingRight="@dimen/main_activity_left_right_padding"
        android:paddingTop="@dimen/main_activity_top_bottom_padding"
        android:paddingBottom="@dimen/main_activity_top_bottom_padding"
        android:gravity="center"
        android:textSize="@dimen/main_activity_title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorAppNameText"
        android:text="@string/main_activity_app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/main_activity_left_right_padding"
            android:paddingRight="@dimen/main_activity_left_right_padding"
            android:paddingTop="@dimen/main_activity_top_bottom_padding"
            android:paddingBottom="@dimen/main_activity_top_bottom_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/surveyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_activity_button_side_margin"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_survey_button_name" />

            <TextView
                android:id="@+id/writingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_activity_button_side_margin"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_writing_button_name" />

            <TextView
                android:id="@+id/readingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_activity_button_side_margin"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_reading_button_name" />

            <TextView
                android:id="@+id/listeningBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_activity_button_side_margin"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_listening_button_name" />

            <TextView
                android:id="@+id/speakingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_activity_button_side_margin"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_speaking_button_name" />

            <TextView
                android:id="@+id/practiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/background_button"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/main_activity_button_text_size"
                android:text="@string/main_activity_practice_button_name" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>