<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/writing_activity_padding"
    tools:context=".writing.WritingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/writing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/subjectTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText" />
    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        android:gravity="top"/>

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/writing_activity_view_side_margin"
        android:text="@string/type_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText" />
    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        android:gravity="top"/>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/writing_activity_view_side_margin"
        android:text="@string/question_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText" />
    <EditText
        android:id="@+id/questionEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/writing_activity_question_edittext_height"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        android:gravity="top"/>

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/writing_activity_view_side_margin"
        android:text="@string/answer_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText" />
    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        android:gravity="top"/>

</LinearLayout>