<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/survey_activity_padding"
    tools:context=".survey.SurveyActivity">

    <TextView
        android:id="@+id/subjectTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subject_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subjectEditText"/>

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        app:layout_constraintRight_toLeftOf="@id/subjectAddBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectTextView"
        app:layout_constraintBottom_toTopOf="@id/subjectLinearLayout"
        android:gravity="top"/>

    <Button
        android:id="@+id/subjectAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_activity_add_button_name"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorDefaultText"
        android:background="@drawable/background_button"
        app:layout_constraintLeft_toRightOf="@id/subjectEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectTextView"
        app:layout_constraintBottom_toTopOf="@id/subjectLinearLayout"
        android:onClick="onClickSubjectAddBtn"/>

    <LinearLayout
        android:id="@+id/subjectLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectEditText"
        app:layout_constraintBottom_toTopOf="@id/typeTextView"/>

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorDefaultText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectLinearLayout"
        app:layout_constraintBottom_toTopOf="@id/typeEditText"/>

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorDefaultText"
        app:layout_constraintRight_toLeftOf="@id/typeAddBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/typeLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/typeTextView"/>
        android:gravity="top"/>

    <Button
        android:id="@+id/typeAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_activity_add_button_name"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorDefaultText"
        android:background="@drawable/background_button"
        app:layout_constraintLeft_toRightOf="@id/typeEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/typeLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/typeTextView"
        android:onClick="onClickTypeAddBtn"/>

    <LinearLayout
        android:id="@+id/typeLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeEditText"
        app:layout_constraintBottom_toTopOf="@id/saveBtn"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_activity_cancel_button_name"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorDefaultText"
        android:background="@drawable/background_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/saveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeLinearLayout"
        android:onClick="onClickCancelBtn"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_activity_save_button_name"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/colorDefaultText"
        android:background="@drawable/background_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeLinearLayout"
        android:onClick="onClickSaveBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>